# CMake_Practice

./: LICENSE  README.md
test1/: CMakeLists.txt
test2/: CMakeLists.txt
test2/src/: CMakeLists.txt
test3/: CMakeLists.txt  build.sh
test3/lib/: CMakeLists.txt
test4/: CMakeLists.txt  build.sh
test4/lib/: CMakeLists.txt  hello.cpp
test4/src/: CMakeLists.txt  main.cpp
